[gd_scene load_steps=4 format=3 uid="uid://c76t7pfrs0t4y"]

[ext_resource type="Script" path="res://scenes/leaderboards/leaderboards.gd" id="1_mevfe"]
[ext_resource type="Script" path="res://scenes/leaderboards/actualleaderboard.gd" id="2_h5rl3"]
[ext_resource type="Script" path="res://scenes/leaderboards/updateleaderboardstuff.gd" id="3_r87v8"]

[node name="leaderboards" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8
script = ExtResource("1_mevfe")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 945.0
grow_vertical = 2
script = ExtResource("2_h5rl3")

[node name="VBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 71.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(180, 80)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1

[node name="HSplitContainer" type="VSeparator" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(180, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1

[node name="HSplitContainer2" type="VSeparator" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(180, 100)
layout_mode = 2
size_flags_vertical = 1

[node name="HSplitContainer3" type="VSeparator" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(180, 100)
layout_mode = 2
size_flags_vertical = 1

[node name="HSplitContainer4" type="VSeparator" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(180, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true
script = ExtResource("3_r87v8")
